--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Eden Consciousness - You Never Left Eden">
     <meta property="og:description" content="Remember your divine nature. Transform your reality. Join the consciousness revolution.">
     <meta property="og:image" content="https://i.imgur.com/LYVHJr5.jpeg">
-    <meta property="og:url" content="https://nazarite777.github.io/divine-temple">
+    <meta property="og:url" content="https://edenconsciousnesssdt.com">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -25,7 +25,7 @@
     <meta name="author" content="Nazir - Divine Temple">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="googlebot" content="index, follow">
-    <link rel="canonical" href="https://nazarite777.github.io/divine-temple/">
+    <link rel="canonical" href="https://edenconsciousnesssdt.com/">
 
     <!-- Additional SEO -->
     <meta name="theme-color" content="#0A0E27">
