--- a/members-new.html
+++ b/members-new.html
@@ -1941,6 +1941,10 @@
     <!-- Final Testing Suite -->
     <script src="js/final-testing.js"></script>
     
+    <!-- Integration System -->
+    <script src="js/integration-config.js"></script>
+    <script src="js/integrations-system.js"></script>
+    
     <!-- Initialize Final Polish -->
     <script>
         // Initialize performance monitoring and final enhancements
