--- a/sections/daily-trivia.html
+++ b/sections/daily-trivia.html
@@ -715,6 +715,7 @@
         </div>
     </div>
 
-    <script src="../js/daily-trivia-system.js"></script>
+    <!-- Fixed trivia system -->
+    <script src="../js/daily-trivia-system-fixed.js"></script>
 </body>
 </html>
