--- a/sections/chakra-memory-match.html
+++ b/sections/chakra-memory-match.html
@@ -798,6 +798,7 @@
         </div>
     </div>
 
-    <script src="../js/chakra-memory-system.js"></script>
+    <!-- Enhanced chakra memory system with sounds and improved persistence -->
+    <script src="../js/chakra-memory-system-enhanced.js"></script>
 </body>
 </html>
