--- a/sections/daily-trivia.html
+++ b/sections/daily-trivia.html
@@ -715,7 +715,8 @@
         </div>
     </div>
 
-    <!-- Fixed trivia system -->
-    <script src="../js/daily-trivia-system-fixed.js"></script>
+    <!-- Enhanced trivia system with audio -->
+    <script src="../js/trivia-audio-system.js"></script>
+    <script src="../js/daily-trivia-system-enhanced.js"></script>
 </body>
 </html>
