--- a/members-new.html
+++ b/members-new.html
@@ -804,6 +804,21 @@
                     </div>
                 </div>
 
+                <!-- 15. Mandala Coloring Canvas -->
+                <div class="nav-card" onclick="showSection('mandala-coloring')">
+                    <span class="nav-icon">🎨</span>
+                    <h4 class="nav-title">Mandala Coloring Canvas</h4>
+                    <p class="nav-description">
+                        Meditative mandala coloring with sacred geometry patterns, healing colors, and mindfulness features.
+                    </p>
+                    <div class="nav-features">
+                        <span class="feature-tag">Sacred Geometry</span>
+                        <span class="feature-tag">6 Healing Palettes</span>
+                        <span class="feature-tag">Meditation Timer</span>
+                        <span class="feature-tag">Save & Share</span>
+                    </div>
+                </div>
+
                 <!-- ADMIN PANEL (Only visible to admin) -->
                 <div class="nav-card admin-only" onclick="showAdminPanel()" style="display: none; background: linear-gradient(135deg, rgba(245, 158, 11, 0.1), rgba(251, 191, 36, 0.1)); border: 2px solid #F59E0B; box-shadow: 0 0 20px rgba(245, 158, 11, 0.3);">
                     <span class="nav-icon">🔱</span>
@@ -865,7 +880,8 @@
             'crystals-elements': 'sections/crystals-elements.html',
             'spiritual-music': 'sections/spiritual-music.html',
             'sacred-books': 'sections/sacred-books.html',
-            'videos-media': 'sections/videos-media.html'
+            'videos-media': 'sections/videos-media.html',
+            'mandala-coloring': 'sections/mandala-coloring.html'
         };
 
         const SECTION_TITLES = {
@@ -882,7 +898,8 @@
             'crystals-elements': 'Crystals & Elements',
             'spiritual-music': 'Spiritual Music & Sound Therapy',
             'sacred-books': 'Sacred Books & Wisdom Library',
-            'videos-media': 'Videos & Media Library'
+            'videos-media': 'Videos & Media Library',
+            'mandala-coloring': 'Mandala Coloring Canvas'
         };
 
         // ========================================
@@ -1944,6 +1961,9 @@
     <!-- Integration System -->
     <script src="js/integration-config.js"></script>
     <script src="js/integrations-system.js"></script>
+    
+    <!-- Mandala Coloring Canvas Game -->
+    <script src="js/mandala-coloring.js"></script>
     
     <!-- Initialize Final Polish -->
     <script>
