--- a/members-new.html
+++ b/members-new.html
@@ -819,6 +819,21 @@
                     </div>
                 </div>
 
+                <!-- 16. Singing Bowl Harmony Garden -->
+                <div class="nav-card" onclick="showSection('singing-bowl-garden')">
+                    <span class="nav-icon">🥣</span>
+                    <h4 class="nav-title">Singing Bowl Harmony Garden</h4>
+                    <p class="nav-description">
+                        Immersive sound healing experience with chakra-tuned singing bowls, zen garden creation, and meditation practices.
+                    </p>
+                    <div class="nav-features">
+                        <span class="feature-tag">7 Chakra Bowls</span>
+                        <span class="feature-tag">Interactive Zen Garden</span>
+                        <span class="feature-tag">3D Spatial Audio</span>
+                        <span class="feature-tag">Achievements</span>
+                    </div>
+                </div>
+
                 <!-- ADMIN PANEL (Only visible to admin) -->
                 <div class="nav-card admin-only" onclick="showAdminPanel()" style="display: none; background: linear-gradient(135deg, rgba(245, 158, 11, 0.1), rgba(251, 191, 36, 0.1)); border: 2px solid #F59E0B; box-shadow: 0 0 20px rgba(245, 158, 11, 0.3);">
                     <span class="nav-icon">🔱</span>
@@ -881,7 +896,8 @@
             'spiritual-music': 'sections/spiritual-music.html',
             'sacred-books': 'sections/sacred-books.html',
             'videos-media': 'sections/videos-media.html',
-            'mandala-coloring': 'sections/mandala-coloring.html'
+            'mandala-coloring': 'sections/mandala-coloring.html',
+            'singing-bowl-garden': 'sections/singing-bowl-garden.html'
         };
 
         const SECTION_TITLES = {
@@ -899,7 +915,8 @@
             'spiritual-music': 'Spiritual Music & Sound Therapy',
             'sacred-books': 'Sacred Books & Wisdom Library',
             'videos-media': 'Videos & Media Library',
-            'mandala-coloring': 'Mandala Coloring Canvas'
+            'mandala-coloring': 'Mandala Coloring Canvas',
+            'singing-bowl-garden': 'Singing Bowl Harmony Garden'
         };
 
         // ========================================
