--- a/sections/daily-trivia-FREE.html
+++ b/sections/daily-trivia-FREE.html
@@ -433,33 +433,34 @@
 
         <div class="trivia-header">
             <div class="free-edition-badge">
-                <span>✨</span>
-                <span>Free Edition - 30 Questions</span>
+                <span>🧠</span>
+                <span>Deprogramming Edition - 30 Questions</span>
             </div>
-            <h1>✨ Daily Spiritual Trivia ✨</h1>
-            <p class="trivia-subtitle">Test your knowledge, earn XP, and expand your consciousness</p>
+            <h1>🔓 Consciousness Awakening Trivia</h1>
+            <p class="trivia-subtitle">Challenge religious programming • Discover hidden truths • Awaken divine consciousness</p>
+            <p style="color: var(--primary-gold); font-weight: 600; margin-top: 0.5rem;">"You will know the truth, and the truth will set you free" - John 8:32</p>
         </div>
 
         <!-- Question Limit Indicator -->
         <div class="question-limit-indicator">
             <div class="question-limit-text">
-                <strong id="questionsCompleted">0</strong> of <strong>30</strong> free questions explored
+                <strong id="questionsCompleted">0</strong> of <strong>30</strong> consciousness-expanding questions explored
             </div>
             <div class="question-progress-bar">
                 <div class="question-progress-fill" id="questionProgressFill" style="width: 0%"></div>
             </div>
             <p style="margin-top: 0.75rem; font-size: 0.85rem; color: var(--primary-gold);">
-                💎 Premium members get 100+ questions across 10+ categories
+                🔓 Premium members access 500+ advanced truth revelations across forbidden knowledge categories
             </p>
         </div>
 
         <!-- Upgrade Banner -->
         <div class="upgrade-banner">
             <div class="upgrade-banner-content">
-                <h3>🚀 Ready for More Challenges?</h3>
-                <p>Unlock 100+ advanced questions, leaderboards, timed challenges, and exclusive categories!</p>
-                <a href="mailto:support@divinetemple.com?subject=Premium Access" class="upgrade-btn">
-                    Unlock Premium Access
+                <h3>🔥 Ready to Go Deeper Down the Rabbit Hole?</h3>
+                <p>Premium members access 500+ advanced deprogramming questions covering Kabbalah, Enochian mysteries, hidden biblical truths, sacred geometry, and consciousness expansion that religious institutions don't want you to know!</p>
+                <a href="mailto:support@divinetemple.com?subject=Premium Access - Ready for Truth" class="upgrade-btn">
+                    💎 Unlock Hidden Knowledge
                 </a>
             </div>
         </div>
@@ -468,19 +469,19 @@
         <div class="stats-bar">
             <div class="stat-card">
                 <div class="stat-value" id="totalQuizzes">0</div>
-                <div class="stat-label">Quizzes Completed</div>
+                <div class="stat-label">Truth Sessions</div>
             </div>
             <div class="stat-card">
                 <div class="stat-value" id="currentStreak">0</div>
-                <div class="stat-label">Day Streak 🔥</div>
+                <div class="stat-label">Awakening Streak 🔥</div>
             </div>
             <div class="stat-card">
                 <div class="stat-value" id="perfectScores">0</div>
-                <div class="stat-label">Perfect Scores</div>
+                <div class="stat-label">Perfect Awakenings</div>
             </div>
             <div class="stat-card">
                 <div class="stat-value" id="totalXPEarned">0</div>
-                <div class="stat-label">Total XP</div>
+                <div class="stat-label">Consciousness XP</div>
             </div>
         </div>
 
@@ -492,15 +493,18 @@
 
         <!-- Already Completed Message -->
         <div id="completedMessage" class="completed-message" style="display: none;">
-            <div class="completed-icon">🎉</div>
-            <h2 class="completed-title">You've completed today's free trivia!</h2>
-            <p class="time-remaining">Come back tomorrow for new questions</p>
+            <div class="completed-icon">🧠</div>
+            <h2 class="completed-title">Consciousness Expansion Complete!</h2>
+            <p class="time-remaining">Return tomorrow for more truth revelations</p>
             <div style="background: rgba(139, 92, 246, 0.15); border: 1px solid var(--accent-purple); border-radius: 15px; padding: 1.5rem; margin: 2rem 0;">
                 <p style="font-size: 1.1rem; margin-bottom: 1rem;">
-                    🌟 Want unlimited access to 100+ questions?
+                    🔓 Ready to access the forbidden knowledge vault?
                 </p>
-                <a href="mailto:support@divinetemple.com?subject=Premium Access" class="upgrade-btn">
-                    Upgrade to Premium
+                <p style="font-size: 0.95rem; color: var(--text-secondary); margin-bottom: 1rem;">
+                    Premium members explore advanced topics: Enochian magic, Kabbalah secrets, hidden biblical codes, sacred geometry mysteries, and consciousness technologies.
+                </p>
+                <a href="mailto:support@divinetemple.com?subject=Premium Access - Unlock Hidden Knowledge" class="upgrade-btn">
+                    💎 Access Hidden Vault
                 </a>
             </div>
             <div class="action-buttons">
