--- a/members-new.html
+++ b/members-new.html
@@ -898,7 +898,8 @@
             'videos-media': 'sections/videos-media.html',
             'mandala-coloring': 'sections/mandala-coloring.html',
             'singing-bowl-garden': 'sections/singing-bowl-garden.html',
-            'chakra-memory-match': 'sections/chakra-memory-match.html'
+            'chakra-memory-match': 'sections/chakra-memory-match.html',
+            'daily-trivia-premium': 'sections/daily-trivia-PREMIUM.html'
         };
 
         const SECTION_TITLES = {
@@ -918,7 +919,8 @@
             'videos-media': 'Videos & Media Library',
             'mandala-coloring': 'Mandala Coloring Canvas',
             'singing-bowl-garden': 'Singing Bowl Harmony Garden',
-            'chakra-memory-match': '🎯 Divine Memory Match - Full Game'
+            'chakra-memory-match': '🎯 Divine Memory Match - Full Game',
+            'daily-trivia-premium': '🧠 Advanced Consciousness Trivia'
         };
 
         // ========================================
