--- a/sections/daily-trivia-PREMIUM.html
+++ b/sections/daily-trivia-PREMIUM.html
@@ -125,28 +125,43 @@
 
         .manual-install-btn {
             position: fixed;
-            top: 1rem;
-            right: 1rem;
+            top: 50%;
+            right: -80px;
             z-index: 999;
             background: var(--gradient-primary);
             border: none;
             color: white;
-            padding: 0.75rem 1.5rem;
-            border-radius: 15px;
+            padding: 1rem 0.75rem;
+            border-radius: 15px 0 0 15px;
             cursor: pointer;
             font-weight: 600;
-            font-size: 0.9rem;
-            box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3);
-            transition: all 0.3s ease;
+            font-size: 0.85rem;
+            box-shadow: -5px 0 15px rgba(212, 175, 55, 0.3);
+            transition: all 0.4s ease;
+            transform: translateY(-50%) rotate(-90deg);
+            transform-origin: center;
+            writing-mode: vertical-lr;
+            text-orientation: mixed;
+            width: 120px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .manual-install-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(212, 175, 55, 0.4);
+            right: -40px;
+            box-shadow: -8px 0 25px rgba(212, 175, 55, 0.5);
+            background: linear-gradient(135deg, #f4c430, #9d6bfc);
         }
 
         .manual-install-btn:active {
-            transform: translateY(0);
+            transform: translateY(-50%) rotate(-90deg) scale(0.95);
+        }
+
+        .manual-install-btn.hidden {
+            right: -120px;
+            opacity: 0;
         }
 
         /* Animated Background */
@@ -1623,6 +1638,9 @@
             }
         }
     </style>
+    
+    <!-- Enhanced PWA Installer -->
+    <script src="../js/enhanced-pwa-installer.js"></script>
 </head>
 <body>
     <!-- PWA Install Banner -->
