Fix character encoding in members-new.html

--- a/members-new.html
+++ b/members-new.html
@@ -708,7 +708,7 @@
 
                     <div class="journey-action" style="flex-shrink: 0;">
                         <button class="cta-button" onclick="window.location.href='journey.html'" style="background: white; color: #8B5CF6; padding: 15px 30px; border: none; border-radius: 12px; font-size: 1.1rem; font-weight: 600; cursor: pointer; transition: transform 0.3s ease, box-shadow 0.3s ease;">
-                            Continue Journey â†’
+                            Continue Journey 
                         </button>
                     </div>
                 </div>
@@ -2657,6 +2657,7 @@
     </script>
 </body>
 </html>
+
 
 
 
