--- a/members-new.html
+++ b/members-new.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1009,9 +1009,9 @@
     </footer>
 
     <script>
-        // ========================================
+        // =====
         // CONFIGURATION
-        // ========================================
+        // =====
         
         // Section mapping for navigation
         const SECTION_MAP = {
@@ -1060,9 +1060,9 @@
             'daily-trivia-premium': '🧠 Advanced Consciousness Trivia - Premium'
         };
 
-        // ========================================
+        // =====
         // UNIVERSAL PROGRESS SYSTEM
-        // ========================================
+        // =====
 
         window.UniversalProgressSystem = {
             init() {
@@ -1215,9 +1215,9 @@
             }
         };
 
-        // ========================================
+        // =====
         // AUTHENTICATION FUNCTIONS
-        // ========================================
+        // =====
 
         function checkAuth() {
             console.log('🔐 Checking authentication status...');
@@ -1520,9 +1520,9 @@
             document.body.style.overflow = 'auto';
         }
 
-        // ========================================
+        // =====
         // DASHBOARD FUNCTIONS
-        // ========================================
+        // =====
 
         /**
          * Load Journey Progress and Update Card
@@ -1692,9 +1692,9 @@
             console.log('✅ Dashboard displayed successfully');
         }
 
-        // ========================================
+        // =====
         // NAVIGATION FUNCTIONS
-        // ========================================
+        // =====
 
         function showSection(sectionId) {
             console.log('📂 Opening section:', sectionId);
@@ -1751,9 +1751,9 @@
             }
         }
 
-        // ========================================
+        // =====
         // ADMIN FUNCTIONS
-        // ========================================
+        // =====
 
         function showAdminPanel() {
             console.log('⚙️ Opening Admin Control Panel...');
@@ -1945,9 +1945,9 @@
             window.scrollTo(0, 0);
         }
 
-        // ========================================
+        // =====
         // LOADING FUNCTIONS
-        // ========================================
+        // =====
 
         function showLoading() {
             const loadingOverlay = document.getElementById('loading-overlay');
@@ -1963,9 +1963,9 @@
             }
         }
 
-        // ========================================
+        // =====
         // EVENT LISTENERS
-        // ========================================
+        // =====
 
         // Listen for messages from iframes
         window.addEventListener('message', function(event) {
@@ -2000,9 +2000,9 @@
             }
         });
 
-        // ========================================
+        // =====
         // INITIALIZATION
-        // ========================================
+        // =====
 
         document.addEventListener('DOMContentLoaded', function() {
             console.log('🕉️ Divine Temple Portal Initializing...');
@@ -2062,9 +2062,9 @@
             console.log('%c✨ Eden Consciousness - Nazir El', 'font-size: 16px; color: #8B5CF6;');
         });
 
-        // ========================================
+        // =====
         // DEBUG FUNCTIONS (Console Only)
-        // ========================================
+        // =====
 
         window.divineTemple = {
             checkAuth: checkAuth,
