Add: Google Drive audio chapter integration to Phase 1 - Replace Spotify embed with direct streaming for all 15 chapters

--- a/phase1-awakening.html
+++ b/phase1-awakening.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -806,14 +806,14 @@
                 </div>
             </div>
 
-            <!-- Sections (Introduction + Chapters + Conclusion) -->
+            <!-- Sections (All Audiobook Chapters) -->
             <div class="chapters-section">
-                <h2 class="section-title">📚 Ya Heard Me Journey</h2>
+                <h2 class="section-title">📚 Chapter Readings</h2>
                 <p style="text-align: center; color: var(--text-secondary); margin-bottom: 2rem;">
                     Expand each section below to read reflection questions and journal prompts.
                     Mark complete as you progress through the audiobook.
                 </p>
-                <div class="chapter-list" id="sectionsContainer">
+                <div class="chapter-list" id="chaptersContainer">
                     <!-- Sections will be dynamically loaded here -->
                 </div>
             </div>
@@ -840,7 +840,7 @@
     <!-- Confetti Library -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-    <!-- Phase 1 Awakening JavaScript -->
+    <!-- Phase 1 Audio Chapters -->`n    <script src="js/phase1-audio-chapters.js"></script>`n`n    <!-- Phase 1 Awakening JavaScript -->
     <script src="js/phase1-awakening.js"></script>
 </body>
 </html>
