Fix: Unified audio player and reflection system - removed script conflicts, integrated Google Drive audio with existing chapter structure

--- a/phase1-awakening.html
+++ b/phase1-awakening.html
@@ -824,7 +824,7 @@
                     Expand each section below to read reflection questions and journal prompts.
                     Mark complete as you progress through the audiobook.
                 </p>
-                <div class="chapter-list" id="chaptersContainer">
+                <div class="chapter-list" id="sectionsContainer">
                     <!-- Sections will be dynamically loaded here -->
                 </div>
             </div>
