Complete backend infrastructure: Analytics, Stripe, Auth, Member Features, Email Automation
- Added Google Analytics 4 with event tracking and conversion goals
- Implemented Stripe payment integration with webhook handling
- Created comprehensive Firebase authentication flows (signup/login/reset)
- Built auth guards for protected pages and premium features
- Implemented real-time Firestore persistence for:
  - Journal entries with word counting
  - Chat rooms with real-time messages
  - Quest/achievement tracking with XP system
  - Meditation logging with streak tracking
  - User stats and leaderboard
- Created Mailchimp automation setup with 5-email welcome sequence
- Added analytics.js module for event tracking
- Added stripe-integration.js for payment processing
- Added firebase-auth.js for authentication
- Added auth-guard.js for access control
- Added member-features.js for Firestore operations
- All 722 files deployed to Firebase Hosting

--- a/pricing.html
+++ b/pricing.html
@@ -546,7 +546,7 @@
             }
         }
     </style>
-</head>
+<script src="https://js.stripe.com/v3/"></script><script src="/js/stripe-integration.js"></script></head>
 <body>
     <!-- Header -->
     <header>
@@ -561,7 +561,7 @@
             </nav>
             <div class="header-actions">
                 <a href="members-new.html" class="btn btn-secondary">Login</a>
-                <a href="https://buy.stripe.com/aFaeVe2fl8F31Rk2i5fjG00" class="btn btn-primary">Go Premium</a>
+                <a href="https://buy.stripe.com/aFaeVe2fl8F31Rk2i5fjG00" class="btn btn-primary">Start Premium Trial</a>
             </div>
         </div>
     </header>
@@ -831,7 +831,7 @@
                 <p>Start your consciousness journey today. Free forever or premium unlimited.</p>
                 <div class="cta-buttons">
                     <a href="members-new.html" class="btn btn-primary">Start Free Today</a>
-                    <a href="https://buy.stripe.com/aFaeVe2fl8F31Rk2i5fjG00" class="btn btn-secondary">Go Premium Now</a>
+                    <a href="https://buy.stripe.com/aFaeVe2fl8F31Rk2i5fjG00" class="btn btn-secondary">Start Premium Trial Now</a>
                 </div>
                 <p style="margin-top: 2rem; color: #888; font-size: 0.9rem;">30-day money-back guarantee • Cancel anytime • No credit card required for free</p>
             </div>
@@ -844,7 +844,7 @@
             <div class="footer-section">
                 <h4>Platform</h4>
                 <a href="members-new.html">Start Free</a>
-                <a href="https://buy.stripe.com/aFaeVe2fl8F31Rk2i5fjG00">Go Premium</a>
+                <a href="https://buy.stripe.com/aFaeVe2fl8F31Rk2i5fjG00">Start Premium Trial</a>
                 <a href="index.html">Home</a>
             </div>
             <div class="footer-section">
