Add header and footer to all pages - complete navigation structure

--- a/ai-guide.html
+++ b/ai-guide.html
@@ -57,5 +57,38 @@
             </div>
         </div>
     </div>
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h4>Platform</h4>
+                <a href="members-new.html">Dashboard</a>
+                <a href="pricing.html">Pricing</a>
+                <a href="index.html">Home</a>
+            </div>
+            <div class="footer-section">
+                <h4>Learn</h4>
+                <a href="about-eden.html">About Eden</a>
+                <a href="features.html">Features</a>
+                <a href="journey.html">Journey</a>
+            </div>
+            <div class="footer-section">
+                <h4>Company</h4>
+                <a href="about-nazir-enhanced.html">About Nazir</a>
+                <a href="privacy.html">Privacy</a>
+                <a href="contact.html">Contact</a>
+            </div>
+            <div class="footer-section">
+                <h4>Community</h4>
+                <a href="testimonials.html">Testimonials</a>
+                <a href="resources.html">Resources</a>
+                <a href="books.html">Books</a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Eden Consciousness. You Never Left Eden.</p>
+        </div>
+    </footer>
 </body>
 </html>
+
