Add professional branding - implement logos across all pages and author profile section

--- a/dashboard.html
+++ b/dashboard.html
@@ -390,7 +390,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <a href="index.html" class="logo">🏛️ Eden Consciousness</a>
+            <a href="index.html" class="logo"><img src="/images/branding/edenlogotransparent.png" alt="Eden Consciousness Logo" style="height: 40px; margin-right: 10px; vertical-align: middle;"><span style="vertical-align: middle;">Eden Consciousness</span></a>
             <div class="user-menu">
                 <span class="user-name">Welcome, Seeker ✨</span>
                 <button class="logout-btn" onclick="alert('Logout functionality will connect to members-new.html authentication')">Logout</button>
@@ -610,4 +610,5 @@
     </footer>
 </body>
 </html>
+
 
