--- a/features.html
+++ b/features.html
@@ -372,7 +372,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <a href="index.html" class="logo">🏛️ Eden Consciousness</a>
+            <a href="index.html" class="logo"><img src="images/branding/edenlogotransparent.png" alt="Eden Consciousness Logo" style="height: 40px; margin-right: 10px; vertical-align: middle;"><span style="vertical-align: middle;">Eden Consciousness</span></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about-eden.html">About Eden</a>
@@ -594,3 +594,4 @@
     </footer>
 </body>
 </html>
+
