--- a/pricing.html
+++ b/pricing.html
@@ -551,7 +551,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <a href="index.html" class="logo">🏛️ Eden Consciousness</a>
+            <a href="index.html" class="logo"><img src="images/branding/edenlogotransparent.png" alt="Eden Consciousness Logo" style="height: 40px; margin-right: 10px; vertical-align: middle;"><span style="vertical-align: middle;">Eden Consciousness</span></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about-eden.html">About Eden</a>
@@ -879,3 +879,4 @@
     </script>
 </body>
 </html>
+
