--- a/about-nazir-enhanced.html
+++ b/about-nazir-enhanced.html
@@ -527,6 +527,24 @@
     </header>
 
     <main>
+        <!-- Author Profile Section -->
+        <section class="author-profile" style="padding: 60px 20px; background: linear-gradient(135deg, rgba(212, 175, 55, 0.05), rgba(45, 27, 78, 0.1)); border-bottom: 1px solid rgba(212, 175, 55, 0.2);">
+            <div class="container" style="display: grid; grid-template-columns: 300px 1fr; gap: 40px; align-items: center; max-width: 900px; margin: 0 auto;">
+                <div style="position: relative; text-align: center;">
+                    <img src="/images/branding/nazir-profile.jpg" alt="Nazir El - Founder" style="width: 280px; height: 280px; border-radius: 20px; border: 3px solid #D4AF37; box-shadow: 0 20px 60px rgba(212, 175, 55, 0.3); object-fit: cover;" onerror="this.src='https://via.placeholder.com/300?text=Nazir+El'">
+                    <div style="position: absolute; bottom: 20px; right: 20px; background: #D4AF37; color: #0a0e1b; padding: 8px 16px; border-radius: 20px; font-weight: 600; font-size: 0.9rem;">Founder & Guide</div>
+                </div>
+                <div>
+                    <h1 style="font-size: 2.5rem; color: #D4AF37; margin-bottom: 0.5rem; font-family: 'Cormorant Garamond', serif;">Nazir El</h1>
+                    <p style="font-size: 1.2rem; color: #999; margin-bottom: 1.5rem;">Spiritual Teacher & Founder of Eden Consciousness</p>
+                    <p style="color: #aaa; font-size: 1.05rem; line-height: 1.8; margin-bottom: 2rem;">Nazir El is a visionary consciousness guide dedicated to helping humanity remember their divine nature. Through the transformational 4-Phase Journey, he guides seekers from awakening to mastery and teaching.</p>
+                    <div style="display: flex; gap: 1rem;">
+                        <a href="contact.html" style="padding: 10px 20px; background: rgba(212, 175, 55, 0.2); color: #D4AF37; border: 1px solid #D4AF37; border-radius: 6px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;" class="social-btn">Contact</a>
+                        <a href="resources.html" style="padding: 10px 20px; background: rgba(212, 175, 55, 0.2); color: #D4AF37; border: 1px solid #D4AF37; border-radius: 6px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;" class="social-btn">Resources</a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Page Header -->
         <div class="page-header">
             <div class="container">
@@ -804,3 +822,4 @@
     </script>
 </body>
 </html>
+
