--- a/contact.html
+++ b/contact.html
@@ -600,6 +600,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Community</h3>
+                    <a href="sections/index.html">All Features</a>
                     <a href="testimonials.html">Testimonials</a>
                     <a href="book-reviews.html">Book Reviews</a>
                     <a href="faq.html">FAQ</a>
