--- a/index.html
+++ b/index.html
@@ -709,6 +709,7 @@
             </div>
             <div class="footer-section">
                 <h4>Community</h4>
+                <a href="sections/index.html">All Features</a>
                 <a href="testimonials.html">Testimonials</a>
                 <a href="journey.html">Journey</a>
                 <a href="affiliate-disclosure.html">Affiliate</a>
@@ -725,7 +726,6 @@
             navigator.serviceWorker.register('/sw.js').catch(e => console.log('SW:', e.message));
         }
     </script>
-<<<<<<< HEAD
 
     <!-- Load section validation utility -->
     <script src="js/section-validation.min.js" defer></script>
