Update continue journey button to point to phase1-awakening.html

--- a/members-new.html
+++ b/members-new.html
@@ -738,7 +738,7 @@
                     </div>
 
                     <div class="journey-action" style="flex-shrink: 0;">
-                        <button class="cta-button" onclick="window.location.href='journey.html'" style="background: white; color: #8B5CF6; padding: 15px 30px; border: none; border-radius: 12px; font-size: 1.1rem; font-weight: 600; cursor: pointer; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                        <button class="cta-button" onclick="window.location.href='phase1-awakening.html'" style="background: white; color: #8B5CF6; padding: 15px 30px; border: none; border-radius: 12px; font-size: 1.1rem; font-weight: 600; cursor: pointer; transition: transform 0.3s ease, box-shadow 0.3s ease;">
                             Continue Journey ?
                         </button>
                     </div>
